packages/components/src/styles/Group.module.css
.group {
	display: flex;
	align-items: center;
	gap: var(--lp-spacing-300);
	overflow: hidden;
	width: 100%;

	&:has([slot='increment'], [slot='decrement']) {
		gap: 0;
	}

	&:has(button[data-rac]) {
		padding-block: 3px;
	}

	&:has([data-combobox-tags]) {
		position: relative;
		flex-wrap: wrap;
		row-gap: var(--lp-spacing-200);

		& input[data-rac] {
			min-width: var(--lp-size-40);
		}

		&:has(> button[data-rac]) {
			padding-inline-end: calc(var(--lp-size-24) + var(--lp-spacing-200));
		}

		&:has(> button[data-rac]:nth-of-type(2)) {
			padding-inline-end: calc(var(--lp-size-48) + var(--lp-spacing-200));
		}

		& > button[data-rac]:last-of-type {
			position: absolute;
			inset-inline-end: var(--lp-spacing-200);
			top: 50%;
			transform: translateY(-50%);
		}

		& > button[data-rac]:nth-last-of-type(2) {
			position: absolute;
			inset-inline-end: calc(var(--lp-size-24) + var(--lp-spacing-200));
			top: 50%;
			transform: translateY(-50%);
		}

		&:has([data-combobox-tags][data-has-tags]) input::placeholder {
			color: transparent;
		}
	}

	&[data-focus-within] {
		outline: 2px solid var(--lp-color-shadow-interactive-focus);
		outline-offset: -2px;
		z-index: 1;
	}

	& input[data-rac],
	[role='presentation'][data-rac] {
		padding: 0;
		outline: none;
		border: none;
		border-radius: unset;
		background-color: inherit;
		cursor: inherit;
	}

	& :where(input[data-rac]) + [data-icon] {
		fill: var(--lp-color-fill-ui-secondary);
	}

	&[data-disabled] > :where([data-icon]) {
		opacity: 0.64;
	}
}

